# AzeroTradeFeed

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  recipe.json  rs-exchanges-parser.Dockerfile  rs-subscan-parser.Dockerfile  rs-telegram-feed-bot.Dockerfile  run.sh  setup.sh  setup_mainnet.sh  setup_testnet.sh
.github/workflows/: prod.yml  rust.yml
rs-azero-dev-parser/: Cargo.toml
rs-exchanges-parser/: Cargo.toml
rs-exchanges-parser/src/: lib.rs  main.rs  mongodb_client_exchanges.rs
rs-exchanges-parser/src/exchange_parsers/: coindcx_parser.rs  gate_parser.rs  kucoin_parser.rs  mexc_parser.rs  mod.rs
rs-subscan-parser/: Cargo.toml
rs-subscan-parser/src/: lib.rs  main.rs  mongodb_client_identities.rs  mongodb_client_subscan.rs  mongodb_client_validator.rs  subscan_parser.rs  subscan_stake_parser.rs  subscan_transfer_parser.rs
rs-telegram-feed-bot/: Cargo.toml
rs-telegram-feed-bot/src/: lib.rs  main.rs  mongodb_client_telegram.rs  telegram_posting.rs
rs-utils/: Cargo.toml
rs-utils/src/: lib.rs
rs-utils/src/clients/: http_client.rs  mod.rs  mongodb_client.rs
rs-utils/src/utils/: logger.rs  mod.rs  print_utils.rs
