[package]
name = "rs-exchanges-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.2"
serde = "1.0.188"
serde_json = "1.0.107"
bson = "2.7.0"
mongodb = "2.6.1"
chrono = "0.4.31"
sha256 = "1.4.0"
tokio = { version = "1.32.0", features = ["default"] }
futures = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"

rs-utils = { path = "../rs-utils" }
