[package]
name = "rs-subscan-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
strum = "0.25.0"
strum_macros = "0.25.3"
serde = "1.0.190"
serde_json = "1.0.107"
bson = "2.7.0"
mongodb = "2.7.0"
chrono = "0.4.31"
sha256 = "1.4.0"
tokio = { version = "1.33.0", features = ["default"] }
futures = "0.3.29"
log = "0.4.20"
env_logger = "0.10.0"
sp-core = "24.0.0"
hex = "0.4.3"

rs-utils = { path = "../rs-utils" }
rs-exchanges-parser = { path = "../rs-exchanges-parser" }
