[package]
name = "rs-telegram-feed-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["default"] }
futures = "0.3.29"
log = "0.4.20"
env_logger = "0.10.0"
serde_json = "1.0.108"
chrono = "0.4.31"
num-format = "0.4.4"

rs-utils = { path = "../rs-utils" }
rs-exchanges-parser = { path = "../rs-exchanges-parser" }
rs-subscan-parser = { path = "../rs-subscan-parser" }
