[package]
name = "rs-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-udeps.ignore]
normal = ["openssl", "openssl-sys"]

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["default"] }
mongodb = "2.6.1"
serde = "1.0.188"
serde_json = "1.0.107"
chrono = "0.4.31"
bson = "2.7.0"
futures = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"
log-panics = "2.1.0"
dotenvy = "0.15.7"


openssl = { version = "0.10.57", features = [
    "vendored",
] } # NEVER FUCKING DELETE THIS LINE!!!
openssl-sys = { version = "0.9.93", features = [
    "vendored",
] } # NEVER FUCKING DELETE THIS LINE!!!
